--- a/style/custom.css
+++ b/style/custom.css
@@ -718,17 +718,19 @@ body{
     font-size: 14pt;
 }
 #cliente div.cores div.row button{
-    width: 5%;
-    border-radius: 25px;
+    width: 50px;
+    border-radius: 30px;
     height: 50px;
-    margin-left: 21%;
+    margin-left: 20%;
     border: 2px solid white;
     margin-bottom: 40px;
 }
 #cliente div.cores div.row button.azul{
     background-color: rgb(0, 110, 255);
 }
-#cliente div.cores div.row button.vermelha:hover{
+#cliente div.cores div.row button.vermelha:hover,
+#cliente div.cores div.row button.azul:hover, 
+#cliente div.cores div.row button.preto:hover{
     transform: scale(0.8);
     opacity: 0.6;
     border: 2px solid greenyellow;
