--- a/style/custom.css
+++ b/style/custom.css
@@ -149,7 +149,7 @@ body{
 }
 #carrinho.active{
     position: relative;
-    margin-top: 120px;
+    margin-top: 60px;
     margin-bottom: 0px;
     border-bottom: 2px solid var(--quarta);
 }
@@ -867,6 +867,267 @@ body{
     margin-bottom: 0;
 }
 /* /HistoricoCli */
+/* Gerenciamento */
+#gerencia{
+    background-color: var(--primeira);
+    color: var(--quarta);
+    border-radius: 20px;
+    width: 60%;
+    height: 400px;
+    margin-left: 20%;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+#gerencia button{
+    width: 50%;
+    margin-top: 5.2%;
+    margin-bottom: 5.2%;
+    border-radius: 20px;
+    background-color: var(--quarta);
+    color: var(--primeira);
+    font-weight: bold;
+    font-size: 14pt;
+}
+#cima.activeGer{
+    margin-top: -250px;
+    border-bottom: 2px solid var(--quarta);
+}
+#voltar.activeGer{
+    position: fixed;
+    margin-top: -180px;
+    z-index: 9999;
+}
+#gerencia.activeGer{
+    margin-top: 250px;
+}
+#baixo.activeGer{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top: 100px;
+    margin-bottom: 0;
+}
+/* /Gerenciamento */
+/* ControleComida */
+#controleComida{
+    display: block;
+    width: 100%;
+    margin-top: 40px;
+}
+#controleComida button{
+    width: 40%;
+    margin-left: 30%;
+    border-radius: 20px;
+    background-color: var(--primeira);
+    color: var(--quarta);
+    font-size: 16pt;
+    font-weight: bold;
+}
+#controleComida .comidas .card{
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: var(--primeira);
+    margin-top: 20px;
+    margin-left: 20%;
+    width: 60%;
+    height: auto;
+}
+#controleComida .comidas .card div .textos{
+    color: var(--quarta);
+    padding-left: 35px;
+    padding-top: 5px;
+}
+#controleComida .comidas .card div .imagem{
+    text-align: end;
+    padding: 15px;
+    padding-right: 35px;
+}
+#controleComida .comidas .card div .imagem img{
+    border: 2px solid var(--quarta);
+}
+#controleComida .comidas .card div a{
+    margin-top: 5%;
+    font-size: 14pt;
+    font-weight: bold;
+    text-decoration: none;
+}
+#cima.activeCC{
+    margin-top: -250px;
+    border-bottom: 2px solid var(--quarta);
+}
+#voltar.activeCC{
+    position: fixed;
+    margin-top: -180px;
+    z-index: 9999;
+}
+#controleComida.activeCC{
+    margin-top: 250px;
+}
+#baixo.activeCC{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top: 100px;
+    margin-bottom: 0;
+}
+/* /ControleComida */
+/* Adicionar */
+#adicionar{
+    width: 60%;
+    height: 400px;
+    border-radius: 20px;
+    margin-left: 20%;
+    margin-top: 40px;
+    background-color: var(--primeira);
+    color: var(--quarta);
+    text-align: center;
+}
+#adicionar form{
+    font-size: 12pt;
+    font-weight: bold;
+}
+#adicionar form label{
+    text-align: start;
+    width: 20%;
+    margin-top: 4%;
+}
+#adicionar form input{
+    background-color: var(--primeira);
+    width: 70%;
+    color: var(--quarta);
+}
+#adicionar form button{
+    width: 60%;
+    border-radius: 20px;
+    background-color: var(--terceira);
+    margin-top: 2%;
+    color: var(--sexta);
+}
+#cima.activeADC{
+    margin-top: -250px;
+    border-bottom: 2px solid var(--quarta);
+}
+#voltar.activeADC{
+    position: fixed;
+    margin-top: -180px;
+    z-index: 9999;
+}
+#adicionar.activeADC{
+    margin-top: 250px;
+}
+#baixo.activeADC{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top: 100px;
+    margin-bottom: 0;
+}
+/* /Adicionar */
+/* Editar Comida */
+#editarComida{
+    width: 60%;
+    height: 400px;
+    border-radius: 20px;
+    margin-left: 20%;
+    margin-top: 40px;
+    background-color: var(--primeira);
+    color: var(--quarta);
+    text-align: center;
+}
+#editarComida form{
+    font-size: 12pt;
+    font-weight: bold;
+}
+#editarComida form label{
+    text-align: start;
+    width: 20%;
+    margin-top: 4%;
+}
+#editarComida form input{
+    background-color: var(--primeira);
+    width: 70%;
+    color: var(--quarta);
+}
+#editarComida form button{
+    width: 60%;
+    border-radius: 20px;
+    background-color: var(--terceira);
+    margin-top: 2%;
+    color: var(--sexta);
+}
+#cima.activeEC{
+    margin-top: -250px;
+    border-bottom: 2px solid var(--quarta);
+}
+#voltar.activeEC{
+    position: fixed;
+    margin-top: -180px;
+    z-index: 9999;
+}
+#editarComida.activeEC{
+    margin-top: 250px;
+}
+#baixo.activeEC{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top: 100px;
+    margin-bottom: 0;
+}
+/* /Editar Comida */
+/* Controle Usuario */
+#controleUsuario{
+    display: block;
+    width: 100%;
+    margin-top: 40px;
+}
+#controleUsuario .usuarios .card{
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: var(--primeira);
+    margin-top: 20px;
+    margin-left: 20%;
+    width: 60%;
+    height: auto;
+    text-align: center;
+}
+#controleUsuario .usuarios .card div{
+    color: var(--quarta);
+    padding-top: 5px;
+}
+#controleUsuario .usuarios .card div h3{
+    font-size: 14pt;
+    margin-left: 10px;
+    font-weight: bold;
+}
+#controleUsuario .usuarios .card div p{
+    font-size: 12pt;
+}
+#controleUsuario .usuarios .card div a{
+    font-size: 14pt;
+    font-weight: bold;
+    text-align: end;
+    margin-left: -10%;
+    text-decoration: none;
+}
+#cima.activeCU{
+    margin-top: -250px;
+    border-bottom: 2px solid var(--quarta);
+}
+#voltar.activeCU{
+    position: fixed;
+    margin-top: -180px;
+    z-index: 9999;
+}
+#controleUsuario.activeCU{
+    margin-top: 250px;
+}
+#baixo.activeCU{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top: 100px;
+    margin-bottom: 0;
+}
+/* /Controle Usuario */
 #baixo{
     display: block;
     background-color: var(--primeira);
