--- a/style/custom.css
+++ b/style/custom.css
@@ -819,8 +819,6 @@ body{
 /* /MyAddress */
 /* HistoricoCli */
 #historicoCli{
-    background-color: var(--primeira);
-    color: var(--quarta);
     width: 60%;
     margin-left: 20%;
     margin-top: 50px;
@@ -828,25 +826,56 @@ body{
     height: auto;
     text-align: center;
 }
-#historicoCli div.row{
-    width: 110%;
-    border-bottom: 2px solid var(--quarta);
+#historicoCli .separaCard{
+    width: 100%;
 }
-#historicoCli div.row h3{
-    margin-left: 70%;
+#historicoCli .separaCard .card{
+    background-color: var(--primeira);
+    color: var(--quarta);
+    width: 23%;
+    height: 350px;
+    margin-left: 2%;
+    margin-bottom: 20px;
+    border-radius: 20px;
 }
-#historicoCli div.row h4{
-    font-size: 14pt;
+#historicoCli .separaCard .card:hover{
+    transform: scale(1.3);
+    z-index: 9999;
+}
+#historicoCli .separaCard .card.pendente{
+    border: 4px solid rgb(155, 8, 8);
+}
+#historicoCli .separaCard .card.pago{
+    border: 4px solid rgb(13, 155, 8);
+}
+#historicoCli .separaCard .card h3{
+    font-size: 11pt;
     font-weight: bold;
-    text-align: start;
-    margin-left: 20%;
-    margin-right: -30%;
-    padding: 15px;
 }
-#historicoCli div.row div.itens{
+#historicoCli .separaCard .card h3.valor{
+    font-size: 14pt;
+    text-align: end;
+    position: absolute;
+    left: 30%;
+    top: 85%;
+}
+#historicoCli .separaCard .card h4{
+    font-size: 12pt;
+    font-weight: bold;
+    padding-top: 10px;
+}
+#historicoCli .separaCard .card div.itens{
     border-top: 2px dashed var(--quarta);
-    width: 50%;
-    margin-left: 25%;
+}
+#historicoCli .separaCard .card div.itens h5.itens{
+    text-align: start;
+    margin-top: 10px;
+    margin-left: 5px;
+    font-size: 13pt;
+}
+#historicoCli .separaCard .card div.itens h5{
+    font-size: 11pt;
+    font-weight: bold;
 }
 #cima.activeHi{
     margin-top: -250px;
@@ -1128,6 +1157,99 @@ body{
     margin-bottom: 0;
 }
 /* /Controle Usuario */
+/* Orçamentos */
+#orcamentos{
+    width: 100%;
+}
+#orcamentos .detalhes .row{
+    background-color: var(--primeira);
+    color: var(--quarta);
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 50px;
+    border-radius: 20px;
+    height: auto;
+    text-align: center;
+}
+#orcamentos .detalhes .row .valor{
+    text-align: end;
+}
+#orcamentos .cliente{
+    color: var(--primeira);
+    width: 60%;
+    margin-left: 20%;
+    margin-top: 50px;
+    border-radius: 20px;
+    height: auto;
+    text-align: center;
+}
+#orcamentos .cliente h3{
+    font-size: 18pt;
+    font-weight: bold;
+}
+#orcamentos .separa{
+    width: 70%;
+    margin-left: 14%;
+    margin-top: 50px;
+    height: auto;
+}
+#orcamentos .separa h3.resposta{
+    text-align: center;
+    font-size: 20pt;
+    font-weight: bold;
+}
+#orcamentos .separa .card{
+    background-color: var(--primeira);
+    color: var(--quarta);
+    width: 20%;
+    border-radius: 20px;
+    height: 150px;
+    text-align: center;
+    margin-left: 5%;
+    margin-top: 20px;
+}
+#orcamentos .separa .card:hover{
+    transform: scale(1.3);
+    z-index: 9999;
+}
+#orcamentos .separa .card.pendente{
+    border: 4px solid rgb(155, 8, 8);
+}
+#orcamentos .separa .card.pago{
+    border: 4px solid rgb(13, 155, 8);
+}
+#orcamentos .separa .card h4{
+    font-size: 13pt;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-bottom: 2px dashed var(--quarta);
+}
+#orcamentos .separa .card h3{
+    font-weight: bold;
+    margin-top: 40px;
+    font-size: 14pt;
+}
+#cima.activeOrc{
+    margin-top: -250px;
+    border-bottom: 2px solid var(--quarta);
+}
+#voltar.activeOrc{
+    position: fixed;
+    margin-top: -180px;
+    z-index: 9999;
+}
+#orcamentos.activeOrc{
+    margin-top: 250px;
+}
+#baixo.activeOrc{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    margin-top: 180px;
+    margin-bottom: 0;
+}
+/* /Orçamentos */
 #baixo{
     display: block;
     background-color: var(--primeira);
