--- a/style/global.css
+++ b/style/global.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&display=swap');
+body, h1, h2, h3, h4, h5, p{
+    font-family: 'IM Fell French Canon', serif;
+}
 .logo{
     padding: 5px, 5px;
 }
